# Tesla-FinRAG-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/evaluation/: benchmark_questions.json  failure_analyses.json  latest_baseline.json  latest_baseline_run.json
data/evaluation/runs/: run_20260307_173648_6307bfc151b1.json  run_20260309_063039_56e373d19037.json  run_20260309_152153_ba83cfd6354e.json
docs/: ARCHITECTURE.md  BACKGROUND.md  DECISION.md  DELIVERY.md  PROJECT.md  runtime_bootstrap.md
docs/research/: 01-ProjectInitResearch.md  02-AgentsImplPlan.md  03-AccuracyOptimizationPlan.md  04-DevVsAgenticBenchmark-Qwen2.5-1.5B.md
openspec/: config.yaml
openspec/changes/add-agent-trace-streaming-and-evaluation/: proposal.md
openspec/changes/add-dual-track-ingestion-pipeline/: agent-pack.md  tasks.md
openspec/changes/add-financial-qa-agent-loop-and-state-memory/: design.md  proposal.md  tasks.md
openspec/changes/add-hybrid-retrieval-and-answer-pipeline/: tasks.md
openspec/changes/add-llm-query-planner-with-rule-fallback/: tasks.md
openspec/changes/add-streamlit-evaluation-workbench/: tasks.md
scripts/: download_pdf.py  download_xbrl.py  pdf_pipeline.py
src/tesla_finrag/: __init__.py  __main__.py  guidance.py  i18n.py  logging_config.py  models.py  provider.py  repositories.py  runtime.py  services.py  settings.py  tracing.py
tests/: conftest.py  test_agentic_components.py  test_answer_rendering.py  test_bootstrap.py  test_calculator.py  test_composer_intent_routing.py  test_evaluation.py  test_i18n.py  test_ingestion.py  test_interfaces.py  test_lancedb_retrieval.py  test_lancedb_store.py  test_lexical.py  test_models.py  test_period_aware.py  test_phase_c.py  test_planner_intent.py  test_provider.py  test_runtime.py  test_settings.py  test_smoke.py  test_workbench_answer_rendering.py  test_workspace.py
tests/integration/: test_e2e_complex_questions.py  test_ingestion_integration.py  test_pipeline_integration.py
(+157 files in other folders)
